--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -129,7 +129,7 @@
 
                     </div>
 
-                {% elif placement.type == placement_types.eventlist %}}
+                {% elif placement.type == placement_types.eventlist %}
 
                     <div class="column column_{{ placement.column_width }} font_size_{{ placement.font_size }}">
                         {% if placement.show_title %}
