--- a/templates/tougcomsys/firsthome/article.html
+++ b/templates/tougcomsys/firsthome/article.html
@@ -19,6 +19,17 @@
             </div>
 
         {% else %}
+            <div class="article article_image_{{ article.detail_image_location }}">
+                <div class="headline">   
+                    <h3>{{ article.headline|safe }}</h3>
+                </div>
+                <div class="subheadline">
+                    {{ article.subheadline|safe }}
+                </div>
+                <div class="content" >
+                    {{ article.content|safe }}
+                </div>
+            </div>
 
 
         {% endif %}
