--- a/static/tougcomsys/tougcomsys_blue.css
+++ b/static/tougcomsys/tougcomsys_blue.css
@@ -1,70 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
-
-
 
 #footer {
-    background-color:#002e5c;
+    background-color: rgb(25, 25, 50);
     color:white;
 }
 
-#menubar {
-    border-color: black;
+#menubar, #menubar a, #menubar a:visited, #menubar a:hover {
+    background-color: rgb(25, 25, 50);
+    color:white;
 }
 
-#menubar a {
+
+.headline, .headline a, .headline a:visited, .headline a:hover {
     color:#022e5b;
 }
 
-#sidemenu {
-    border-color: black;
-}
-
-#sidemenu a {
-    color:#022e5b;
-}
-
-
-
-div.detail div.headline h2 {
-    color:#002e5c;
-    background-color: #cdf;
-}
-
-div.detail div.headline h2 a {
-    color:#002e5c;
-}
-
-div.detail div.headline h3 {
+.subheadline, .subheadline a, .subheadline a:visited, .subheadline a:hover {
     color:#00a7e0;
-}
-
-div.detail div.headline h3 a {
-    color:#00a7e0;
-}
-
-div.list div.columns div.column  {
-    border-left-color:  blue ;
-}
-
-div.list div.article div.headline h2 {
-    color:#002e5c;
-    background-color: #cdf;
-}
-
-div.list div.article div.headline h2 a {
-    color:#002e5c;
-    background-color: #cdf;
-}
-
-div.list div.article div.headline h3 {
-    color: #002e5c;
-}
-
-div.list div.article div.headline h3 a {
-    color: #002e5c;
-}
-div.list div.columns .article {
-    border-bottom:1px solid blue;
 }
 
