--- a/static/tougcomsys/tougcomsys.css
+++ b/static/tougcomsys/tougcomsys.css
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
 .font_size_xs {
-    font-size:60%;
+    font-size:33%;
 }
 .font_size_s {
-    font-size:80%;
+    font-size:66%;
 }
 .font_size_m {
     font-size:100%;
@@ -54,16 +54,23 @@
 
 h3 {
     font-family: 'Gilda Display', serif;
-    font-size:3em;
+    font-size:2.5em;
+    margin-bottom:.5ex;
+}
+
+h4 {
+    font-family: 'Gilda Display', serif;
+    font-size:2em;
 
 }
+
 
 div.headline a {
     text-decoration: none;
 }
 
 div.subheadline {
-    font-size:2em;
+    font-size:1.6em;
     margin-bottom:1em;
 }
 
@@ -77,7 +84,7 @@ div.content {
     font-size:1.4em;
 }
 
-div.article_image_top img {
+div.article_with_image_top img { 
     width:80%;
     margin: 0 10%;
 }
@@ -111,11 +118,12 @@ div.column_wide {
         display:block;    
     }
 
-    div.article_image_side img {
+    div.article_with_image_side img {
         float:none;
         width:90%;
         margin-right:0;
     }
+
 }
 
 @media only screen and (min-width: 600px) {
@@ -149,28 +157,33 @@ div.column_wide {
         border-left: none;
     }
 
-    div.article_image_top div.list_image {
+    div.article_with_image_top div.list_image {
         float:right;
         width:60%;
     }
 
-    div.article_image_top div.list_image {
+    div.article_with_image_top div.list_image {
         width:100%;
     }
 
-    div.article_image_side div.list_image {
+    div.article_with_image_side div.list_image {
         float:right;
         width:60%;
     }
 
-    div.article_image_side div.list_image {
+    div.article_with_image_side div.list_image {
         width:100%;
     }
 
-    div.article_image_side::after {
+    div.article_with_image_side::after {
         clear:both;
         content: "";
         display:block;
     }
+
+    div.event {
+        margin-left:3em;
+    }
+
 
 }
