--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -8,7 +8,7 @@
 
                 {% if placement.type == placement_types.articlelist %}
 
-                    <div class="column column_{{ placement.column_width }} font_size_{{ placement.font_size }}">
+                    <div class="column column_{{ placement.column_width }} ">
                         {% if placement.show_title %}
                             <h2>{{ placement.title }}</h2>
                         {% endif %}
@@ -16,7 +16,7 @@
                         {% for articleplacement in placement.articleplacements %}
 
                             {% if articleplacement.article.list_image %}
-                            <div class="article article_image_{{ articleplacement.article.list_image_location }}">
+                            <div class="article article_with_image_{{ articleplacement.article.list_image_location }} font_size_{{ placement.font_size }}">
 
                                 <div class="headline">   
                                     <a href="{% url 'tougcomsys:article' slug=articleplacement.article.slug %}">                                          
@@ -40,7 +40,7 @@
 
                             {% else %}
 
-                                <div class="article">
+                                <div class="article font_size_{{ placement.font_size }}">
                                     <div class="list_textfields">
                                         <div class="headline">    
                                             <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">                                          
@@ -67,19 +67,19 @@
 
                 {% elif placement.type == placement_types.eventlist %}
 
-                    <div class="column column_{{ placement.column_width }} font_size_{{ placement.font_size }}">
+                    <div class="column events column_{{ placement.column_width }} ">
                         {% if placement.show_title %}
                             <h2>{{ placement.title }}</h2>
                         {% endif %}
 
                         {% for event_date, events in placement.events.items %}
-                            <div class="event_date">
+                            <div class="event_date font_size_{{ placement.font_size }}">
                                 <h3 class="event_date">
                                     {{ event_date }}
                                 </h3>
                             </div>
                             {% for event in events %}
-                                <div class="article">
+                                <div class="article event font_size_{{ placement.font_size }}">
                                     <div class="list_textfields">
                                         {% if event.slug %}
                                             <a href="{% url 'tougcomsys:article' event.slug %}">
