--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -14,6 +14,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap" rel="stylesheet">
+        {% for head_line in tougcomsys.head_lines %}
+            {{ head_line|safe }}
+        {% endfor %}
     </head>
     <body>
 
