--- a/static/tougcomsys/tougcomsys.css
+++ b/static/tougcomsys/tougcomsys.css
@@ -84,6 +84,10 @@ div.content {
     font-size:1.4em;
 }
 
+div.article {
+    border-bottom: 1px solid;
+}
+
 div.article_with_image_top div.detail_image {
     text-align: center; 
     width:80%;
